# props-util

./: Cargo.toml  README.md  test.properties
examples/: test.properties  test.rs
src/: lib.rs
tests/: integration_test.rs
