[package]
name = "props-util"
version = "0.1.0"
edition = "2024"

authors = ["dineshadhi <dinesh10c04@gmail.com>"]
readme = "README.md"
description = "A Rust library for easily loading and parsing properties files into strongly-typed structs."
repository = "https://github.com/dineshadhi/props-util.git"
license = "MIT"
keywords = ["util", "properties", "proc-macro"]
categories = ["util"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.100"
